@@ -161,6 +161,7 @@ The bulk of these enhancements have been from Paarth Agarwal, who has been doing
  * Improve security of redirect imports by adding a file hash (signature) check for so that any tampering of file contents between requests will throw a `BadSignature` error (Jaap Roes)
  * Allow generic chooser viewsets to support non-model data such as an API endpoint (Matt Wescott)
  * Improve organisation of the settings reference page in the documentation (Akash Kumar Sen)
+ * Added `path` and `re_path` decorators to the `RoutablePageMixin` module which emulate their Django URL utils equivalent, redirect `re_path` to the original `route` decorator (Tidiane Dia)
 
 ### Bug fixes
 
@@ -349,3 +350,9 @@ Previously, it was valid to specify an arbitrary model form as the `WAGTAILDOCS_
 ### Panel customisations
 
 As part of the page editor redesign, we have removed support for the `classname="full"` customisation to panels. Existing `title` and `collapsed` customisations remain unchanged.
+
+### Optional replacement for regex only `route` decorator for `RoutablePageMixin`
+
+-   This is an optional replacement, there are no immediate plans to remove the `route` decorator at this time.
+-   The `RoutablePageMixin` contrib module now provides a `path` decorator that behaves the same way as Django's [`django.urls.path`](https://docs.djangoproject.com/en/stable/ref/urls/#django.urls.path) function.
+-   `RoutablePageMixin`'s `route` decorator will now redirect to a new `re_path` decorator that emulates the behaviour of [`django.urls.re_path`](https://docs.djangoproject.com/en/stable/ref/urls/#django.urls.re_path).
