@@ -1,15 +1,23 @@
+import logging
+from functools import partial
+
+from django.core.checks import Warning
 from django.http import Http404
 from django.template.response import TemplateResponse
-from django.urls import URLResolver, re_path
-from django.urls.resolvers import RegexPattern
+from django.urls import URLResolver
+from django.urls import path as path_func
+from django.urls import re_path as re_path_func
+from django.urls.resolvers import RegexPattern, RoutePattern
 
 from wagtail.models import Page
 from wagtail.url_routing import RouteResult
 
 _creation_counter = 0
 
+logger = logging.getLogger("wagtail.routablepage")
 
-def route(pattern, name=None):
+
+def _path(pattern, name=None, func=None):
     def decorator(view_func):
         global _creation_counter
         _creation_counter += 1
@@ -21,7 +29,7 @@ def route(pattern, name=None):
         # Add new route to view
         view_func._routablepage_routes.append(
             (
-                re_path(pattern, view_func, name=(name or view_func.__name__)),
+                func(pattern, view_func, name=(name or view_func.__name__)),
                 _creation_counter,
             )
         )
@@ -31,13 +39,20 @@ def route(pattern, name=None):
     return decorator
 
 
+re_path = partial(_path, func=re_path_func)
+path = partial(_path, func=path_func)
+
+# Make route an alias of re_path for backwards compatibility.
+route = re_path
+
+
 class RoutablePageMixin:
     """
     This class can be mixed in to a Page model, allowing extra routes to be
     added to it.
     """
 
-    @route(r"^$")
+    @path("")
     def index_route(self, request, *args, **kwargs):
         request.is_preview = getattr(request, "is_preview", False)
 
@@ -77,6 +92,37 @@ class RoutablePageMixin:
             )
 
         return cls._routablepage_urlresolver
+
+    @classmethod
+    def check(cls, **kwargs):
+        errors = super().check(**kwargs)
+        errors.extend(cls._check_path_with_regex())
+        return errors
+
+    @classmethod
+    def _check_path_with_regex(cls):
+        routes = cls.get_subpage_urls()
+        errors = []
+        for route in routes:
+            if isinstance(route.pattern, RoutePattern):
+                pattern = route.pattern._route
+                if (
+                    "(?P<" in pattern
+                    or pattern.startswith("^")
+                    or pattern.endswith("$")
+                ):
+                    errors.append(
+                        Warning(
+                            (
+                                f"Your URL pattern {route.name or route.callback.__name__} has a "
+                                "route that contains '(?P<', begins with a '^', or ends with a '$'."
+                            ),
+                            hint="Decorate your view with re_path if you want to use regexp.",
+                            obj=cls,
+                            id="wagtailroutablepage.W001",
+                        )
+                    )
+        return errors
 
     def reverse_subpage(self, name, args=None, kwargs=None):
         """
@@ -136,7 +182,7 @@ class RoutablePageMixin:
 
         .. code-block:: python
 
-            @route(r'^$') # override the default route
+            @path('') # override the default route
             def upcoming_events(self, request):
                 return self.render(request, context_overrides={
                     'title': "Current events",
@@ -148,7 +194,7 @@ class RoutablePageMixin:
 
         .. code-block:: python
 
-            @route(r'^past/$')
+            @path('past/')
             def past_events(self, request):
                 return self.render(
                     request,
