@@ -1,6 +1,6 @@
 from django.http import HttpResponse
 
-from wagtail.contrib.routable_page.models import RoutablePage, route
+from wagtail.contrib.routable_page.models import RoutablePage, path, re_path, route
 
 
 def routable_page_external_view(request, arg="ARG NOT SET"):
@@ -20,6 +20,14 @@ class RoutablePageTest(RoutablePage):
     @route(r"^archive/author/(?P<author_slug>.+)/$")
     def archive_by_author(self, request, author_slug):
         return HttpResponse("ARCHIVE BY AUTHOR: " + author_slug)
+
+    @path("archive/title/<slug:title>/")
+    def archive_by_title(self, request, title):
+        return HttpResponse("ARCHIVE BY TITLE: " + title)
+
+    @re_path(r"^archive/category/(?P<category_slug>.+)/$")
+    def archive_by_category(self, request, category_slug):
+        return HttpResponse("ARCHIVE BY CATEGORY: " + category_slug)
 
     @route(r"^external/(.+)/$")
     @route(r"^external-no-arg/$")
